# shannon-insight

./: .env.example  .gitattributes  .gitignore  ARCHITECTURE_REDESIGN.md  AUDIT-REPORT.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DESIGN-SYSTEM.md  FRONTEND-BUGS.md  FRONTEND-REDESIGN-SUMMARY.md  INFORMATION-ARCHITECTURE.md  LICENSE  Makefile  NEXT_STEPS.md  PHASE3_AUDIT.md  README.md  REAL-BUGS-FOUND.md  STATUS.md  pyproject.toml  setup.py  shannon-insight.toml  shannon-report.html  verify_fixes.py
.github/workflows/: ci.yml  publish.yml
agents/spec/: .gitignore  README.md  agent.py  config.py  example.py  install.sh  layers.py  llm.py  probes.py  requirements.txt  spec_output.py  system_prompt.md
docs/: AUDIT_EXECUTIVE_SUMMARY.md  BASELINE_ANALYSIS.md  CONFIGURATION.md  DASHBOARD_PROMPTS.md  DASHBOARD_ROADMAP.md  DOCUMENTATION_CLEANUP_CHECKLIST.md  DOCUMENTATION_PROMPT.md  FINDERS.md  IMPLEMENTATION_AGENT_PROMPT.md  INSIGHT_DELIVERY_PIPELINE.md  MATHEMATICAL_FOUNDATION.md  PRODUCT_AUDIT_2026.md  REAL_GAPS_2026-02-14.md  REARCHITECTURE_PLAN.md  SIGNALS.md  SIGNAL_PIPELINE_GUIDE.md  brainstorm-v2.md  framework.md  mathematics.md  solutions.md  walkthrough.md
docs/audits/: BROWSER-SIGNAL-FIXES.md  CRITICAL-BUGS-FINAL.md  FIXES-APPLIED.md
docs/design/: ARCHITECTURE-COMPARISON.md  DASHBOARD.md  DATA-OBJECTS-ARCHITECTURE.md  IMPLEMENTATION-GUIDE.md  INSIGHT_ENGINE.md  PRIMITIVE_REDESIGN.md  TEMPORAL-MODULE-ARCHITECTURE.md  TEMPORAL-MODULE-REDESIGN.md  TEMPORAL-UX-STRATEGY.md  ir-spec.md  spec-v2.md
docs/marketing/: ARCHITECTURE.md  COMPARISON.md  EXAMPLES.md  README.md  THEORY.md
docs/prompts/: AGENT-CONTEXT.md  AGENT_PROMPT.md  QA-AGENT-PROMPT.md
docs/research/: DEFECT_PREDICTION_RESEARCH.md  DEVELOPER_UTILITY_RESEARCH.md  EMPIRICAL_VALIDATION.md  FEATURE_CODE_SMELLS.md  FEATURE_DUPLICATE_DETECTION.md  FEATURE_SAST.md  IMPLEMENTATION_GUIDE.md  MATHEMATICAL_FOUNDATIONS_OF_CODE_QUALITY_ANALYSIS.md  MATH_INTUITIONS.md  OUTPUT_UX_THEORY.md  QUICK_REFERENCE.md  README.md  RELIABILITY_INSIGHTS_PRIMITIVE_REDESIGN.md  defect-prediction-quick-reference.md  implementation-priorities.md  mathematical-foundations-of-defects.md
docs/v2/: 00-overview.md  01-contracts.md  AGENT-IMPLEMENTATION-PROMPT.md  BACKLOG.md  FAILURE-MODES.md  FINDER-REHEARSAL.md  IMPLEMENTATION-GUIDE.md  MIGRATION-PLAN.md  MIGRATION-STATUS.md  ORCHESTRATION-VERIFICATION.md  PATTERN-MIGRATION-COMPLETE.md  PHASE-6-IMPLEMENTATION-GUIDE.md  PHASE-6-QUICK-START.md  PHASE-7-HANDOFF.md  SESSION-PROMPT.md  SIGNAL-REHEARSAL.md  SPEC-REFERENCE.md  infrastructure.md
docs/v2/architecture/: README.md
docs/v2/phases/: phase-0-baseline.md  phase-1-deep-parsing.md  phase-2-semantics.md  phase-3-graph-enrichment.md  phase-4-architecture.md  phase-5-signal-fusion.md  phase-6-finders.md  phase-7-persistence-v2.md
docs/v2/registry/: composites.md  derived-dimensions.md  dimensions.md  distance-spaces.md  finders.md  scales.md  signals.md  temporal-operators.md
examples/: README.md  basic_usage.py  typescript_example.py
experiments/: 01_measurement_audit.py  02_cochange_analysis.py  03_churn_trajectory.py  04_spectral_summary.py  05_category_projection.py  06_algebraic_validation.py  07_topology_experiment.py  README.md  _bootstrap.py
marketing-site/: README.md  docs.html  index.html
marketing-site/css/: animations.css  styles.css
marketing-site/js/: main.js
scripts/: build-frontend.sh
src/shannon_insight/: __init__.py  api.py  baseline.py  cache.py  cli.py  config.py  core.py  debug_export.py  environment.py  file_ops.py  grammar_installer.py  logging_config.py  models.py  py.typed  security.py  session.py
src/shannon_insight/analysis/: __init__.py  engine.py  models.py
src/shannon_insight/analyzers/: __init__.py  base.py  c_analyzer.py  go_analyzer.py  java_analyzer.py  languages.py  python_analyzer.py  ruby_analyzer.py  (+4 more)
test_codebase/: anomaly_high_complexity.go  anomaly_many_imports.go  complex.go  normal_1.go  normal_2.go  normal_3.go  sample.go  simple.go
tests/: __init__.py  conftest.py  test_baseline.py  test_database.py  test_diff.py  test_events.py  test_formatters.py  test_graph_algorithms.py  test_integration.py  test_math_compression.py  test_math_entropy.py  test_math_fusion.py  test_math_gini.py  test_math_graph.py  test_math_identifier.py  test_math_robust.py  test_math_statistics.py  test_multilang_primitives.py  test_parquet_integration.py  test_parquet_storage.py  test_persistence_finders.py  test_queries.py  test_rename.py  test_scope.py  test_server_lifecycle.py  test_signal_sanity.py  test_snapshot.py  test_storage.py  test_universal_scanner.py  test_v2_architecture.py  test_visualization.py
tests/architecture/: test_layers.py  test_metrics.py  test_models.py  test_modules.py
tests/cli/: test_hotspots.py  test_signal_display.py
tests/exceptions/: test_taxonomy.py
tests/finders/: test_temporal_finder_regression.py
tests/fixtures/: README.md  Sample.java  sample.c  sample.cpp  sample.go  sample.js  sample.rb  sample.rs  sample.ts  sample_complex.py  sample_entry.py  sample_model.py  sample_orphan.py  sample_simple.py  sample_stubs.py  test_sample.py  validate_findings.py
tests/graph/: test_author_distance.py  test_clone_detection.py  test_phase3_algorithms.py  test_phase3_models.py
tests/infrastructure/: test_provenance.py  test_provenance_persistence.py  test_session_log.py  test_signals.py  test_store_provenance.py  test_thresholds.py
tests/insights/: test_kernel_toposort.py  test_protocols_v2.py  test_store.py  test_store_v2.py  test_threshold.py  test_validation.py
tests/scanning/: test_fallback.py  test_language_fixtures.py  test_models_v2.py  test_normalizer.py  test_syntax.py  test_syntax_extractor.py  test_treesitter_parser.py
tests/semantics/: __init__.py  test_role_classification.py  test_semantics.py
tests/server/: test_api.py  test_state.py
tests/signals/: test_fusion.py  test_fusion_phase5.py  test_registry.py  test_registry_v2.py
tests/temporal/: test_cache.py  test_churn.py  test_performance.py  test_phase3_models.py  test_trajectory.py
(+476 files in other folders)
