[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "shannon-insight"
version = "0.1.0"
description = "Multi-signal codebase quality analyzer using mathematical primitives"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Naman Agarwal"}
]
keywords = ["code-quality", "static-analysis", "codebase-analysis", "metrics", "entropy", "mathematics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Quality Assurance",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy>=1.20.0",
    "scikit-learn>=1.0.0",
]

[project.scripts]
shannon-insight = "shannon_insight.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/shannon-insight"
Documentation = "https://github.com/yourusername/shannon-insight#readme"
Repository = "https://github.com/yourusername/shannon-insight"
"Bug Tracker" = "https://github.com/yourusername/shannon-insight/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
