[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shannon-codebase-insight"
dynamic = ["version"]
description = "Multi-level codebase structural analysis using information theory and graph algorithms"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    {name = "Naman Agarwal"}
]
keywords = ["code-quality", "static-analysis", "codebase-analysis", "metrics", "entropy", "mathematics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Environment :: Console",
    "Typing :: Typed",
]
dependencies = [
    "numpy>=1.22.0",
    "scikit-learn>=1.0.0",
    "scipy>=1.7.0",
    "rich>=13.0.0",
    "textual>=0.50.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "diskcache>=5.6.0",
    "typer>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "build>=0.10.0",
    "twine>=4.0.0",
]
tensordb = [
    "pyarrow>=14.0.0",
    "duckdb>=1.0.0",
]
serve = [
    "starlette>=0.37.0",
    "uvicorn[standard]>=0.29.0",
    "watchfiles>=0.21.0",
]
parsing = [
    "tree-sitter>=0.23",
    "tree-sitter-python>=0.23",
    "tree-sitter-go>=0.23",
    "tree-sitter-typescript>=0.23",
    "tree-sitter-javascript>=0.23",
    "tree-sitter-java>=0.23",
    "tree-sitter-rust>=0.23",
    "tree-sitter-ruby>=0.23",
    "tree-sitter-c>=0.23",
    "tree-sitter-cpp>=0.23",
]

[project.scripts]
shannon-insight = "shannon_insight.cli:app"

[project.entry-points."shannon_insight.languages"]
go = "shannon_insight.scanning:GoScanner"
typescript = "shannon_insight.scanning:TypeScriptScanner"
python = "shannon_insight.scanning:PythonScanner"

[project.urls]
Homepage = "https://github.com/namanagarwal/shannon-insight"
Documentation = "https://github.com/namanagarwal/shannon-insight#readme"
Repository = "https://github.com/namanagarwal/shannon-insight"
"Bug Tracker" = "https://github.com/namanagarwal/shannon-insight/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
shannon_insight = [
    "py.typed",
    "storage/*.sql",
    "query/finders/*.sql",
    "server/static/*.css",
    "server/static/*.js",
    "server/templates/*.html",
]

[tool.setuptools.dynamic]
version = {attr = "shannon_insight.__version__"}

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "B904",  # raise from (too strict for our use case)
    "E741",  # ambiguous variable name (l is fine in comprehensions)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["shannon_insight"]

[tool.ruff.format]
line-ending = "auto"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
show_error_context = true
pretty = true

[[tool.mypy.overrides]]
module = ["sklearn.*", "diskcache.*", "typer.*", "rich.*", "tree_sitter.*", "tree_sitter_python.*", "tree_sitter_go.*", "tree_sitter_typescript.*", "tree_sitter_javascript.*", "tree_sitter_java.*", "tree_sitter_rust.*", "tree_sitter_ruby.*", "tree_sitter_c.*", "tree_sitter_cpp.*", "pyarrow.*", "duckdb.*", "starlette.*", "uvicorn.*", "watchfiles.*"]
ignore_missing_imports = true
